ARM Plugin for x86 Changes

--- a/src/common/preprocessing/src/CMakeLists.txt
+++ b/src/common/preprocessing/src/CMakeLists.txt
@@ -74,7 +74,8 @@ if(ENABLE_AVX512F AND NOT GNU_5_DEBUG_CASE)
     add_definitions(-DHAVE_AVX512=1)
 endif()
 
-if(ARM OR AARCH64)
+# MY_LOG
+if(ENABLE_NEON AND (ARM OR AARCH64))
     ov_arm_neon_optimization_flags(neon_flags)
 
     file(GLOB NEON_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/arm_neon/*.hpp)
