--- a/src/plugins/intel_cpu/CMakeLists.txt
+++ b/src/plugins/intel_cpu/CMakeLists.txt
@@ -49,16 +49,19 @@ if(OV_CPU_ARM_TARGET_ARCH MATCHES "(armv|arm64-v)[8-9]\\.")
     add_definitions(-DOV_CPU_ARM_ENABLE_FP16)
 endif()
 
-if(X86 OR X86_64 OR AARCH64)
-    # disable mlas with webassembly
-    if(EMSCRIPTEN OR (WIN32 AND AARCH64) OR MINGW OR (CMAKE_COMPILER_IS_GNUCXX AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7))
-        set(ENABLE_MLAS_FOR_CPU_DEFAULT OFF)
+if (NOT DEFINED ENABLE_MLAS_FOR_CPU_DEFAULT)
+    if(X86 OR X86_64 OR AARCH64)
+        # disable mlas with webassembly
+        if(EMSCRIPTEN OR (WIN32 AND AARCH64) OR MINGW OR (CMAKE_COMPILER_IS_GNUCXX AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7))
+            set(ENABLE_MLAS_FOR_CPU_DEFAULT OFF)
+        else()
+            set(ENABLE_MLAS_FOR_CPU_DEFAULT ON)
+        endif()
     else()
-        set(ENABLE_MLAS_FOR_CPU_DEFAULT ON)
+        set(ENABLE_MLAS_FOR_CPU_DEFAULT OFF)
     endif()
-else()
-    set(ENABLE_MLAS_FOR_CPU_DEFAULT OFF)
 endif()
+
 ov_option(ENABLE_MLAS_FOR_CPU "Enable MLAS for OpenVINO CPU Plugin" ${ENABLE_MLAS_FOR_CPU_DEFAULT})
 
 add_subdirectory(thirdparty)
